# slurmpy

./: .gitignore  LICENSE  README.md  pyproject.toml
doc/slurmpy/: index.html  version.html
slurmpy/: __init__.py  _job.py  _main.py  _self_type.py
tests/: test_job.py
