[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "slurmpy"
version = "0.0.1"
authors = [
    {name = "Constantinos Menelaou", email = "konmenel@gmail.com"},
]
description = "A simple python interface for working with SLURM because I am tired of bash"
readme = "README.md"
requires-python = ">=3.7"
dependencies = []
