[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "slurmpy"
dynamic = ["version"]
authors = [
    {name = "Constantinos Menelaou", email = "konmenel@gmail.com"},
]
description = "A simple python interface for working with SLURM because I am tired of bash"
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "black", "flake8", "pdoc3"]
test = ["pytest"]

[tool.setuptools.dynamic]
version = {attr = "slurmpy.__version__"}
